# JustAnotherVoiceChat-Server

./: .gitignore  .gitmodules  .travis.yml  AlternateVoice.Server.sln  AlternateVoice.Server.sln.licenseheader  JustAnotherVoiceChat.Server.sln  JustAnotherVoiceChat.Server.sln.licenseheader  LICENSE  README.md  appveyor.yml
AlternateLife.Server.Dummy/: AlternateLife.Server.Dummy.csproj
AlternateLife.Server.Dummy/src/: Program.cs
AlternateVoice.Server/: AlternateVoice.Server.csproj  AlternateVoice.Server.vcxproj  AlternateVoice.Server.vcxproj.filters  CMakeLists.txt  dllmain.cpp
AlternateVoice.Server.Dummy/: AlternateVoice.Server.Dummy.csproj
AlternateVoice.Server.Dummy/src/: Program.cs  ServerHandler.cs
AlternateVoice.Server.Dummy/src/Client/: DummyClient.cs
AlternateVoice.Server.GTMP/: AlternateVoice.Server.GTMP.csproj  packages.config
AlternateVoice.Server.GTMP.Resource/: AlternateVoice.Server.GTMP.Resource.csproj  meta.xml  packages.config
AlternateVoice.Server.GTMP.Resource/Client/: GtmpVoice.js
AlternateVoice.Server.GTMP.Resource/Properties/: AssemblyInfo.cs
AlternateVoice.Server.GTMP.Resource/Server/: VoiceScript.Commands.cs  VoiceScript.Events.cs  VoiceScript.cs
AlternateVoice.Server.GTMP/Properties/: AssemblyInfo.cs
AlternateVoice.Server.GTMP/src/: GtmpDelegates.cs  GtmpFactory.cs  GtmpVoiceDelegates.cs  GtmpVoiceFactory.cs  GtmpVoiceServer.cs
AlternateVoice.Server.GTMP/src/Clients/: GtmpVoiceClient.cs
AlternateVoice.Server.GTMP/src/Elements/: VoiceToClientMapper.cs
AlternateVoice.Server.GTMP/src/Exceptions/: GtmpElementCreationException.cs
AlternateVoice.Server.GTMP/src/Extensions/: ClientExtensions.cs
AlternateVoice.Server.GTMP/src/Factories/: GtmpVoice.cs
AlternateVoice.Server.GTMP/src/Interfaces/: IGtmpVoiceClient.cs  IGtmpVoiceElement.cs  IGtmpVoiceServer.cs  IVoiceToClientMapper.cs
AlternateVoice.Server.GTMP/src/Repositories/: ClientRepository.cs
AlternateVoice.Server.Testing/: AlternateVoice.Server.Testing.csproj
AlternateVoice.Server.Testing/src/: FakeAction.cs
AlternateVoice.Server.Wrapper/: AlternateVoice.Server.Wrapper.csproj
AlternateVoice.Server.Wrapper.Tests/: AlternateVoice.Server.Wrapper.Tests.csproj
AlternateVoice.Server.Wrapper.Tests/src/: AlternateVoiceFixture.cs  VoiceServerFixtures.cs
AlternateVoice.Server.Wrapper/Properties/: AssemblyInfo.cs
AlternateVoice.Server.Wrapper/src/: AlternateVoice.cs  Delegates.cs
AlternateVoice.Server/Properties/: AssemblyInfo.cs
AlternateVoice.Server/include/: API.h  AlternateVoice.h  AlternateVoiceAPI.h  AlternateVoiceClient.h  AlternateVoiceServer.h  AlternateVoiceServerWrapper.h  Internal.h  Server.h
AlternateVoice.Server/src/: API.cpp  AlternateVoice.cpp  AlternateVoice.cs  AlternateVoiceAPI.cpp  AlternateVoiceClient.cpp  AlternateVoiceServer.cpp  AlternateVoiceServerWrapper.cpp  CMakeLists.txt  Client.cpp  Internal.cpp  Server.cpp  dllmain.cpp
AlternateVoice.Server/src/Elements/: VoiceClient.cs  VoiceServer.cs
AlternateVoice.Server/src/Interfaces/: IVoiceClient.cs  IVoiceGroup.cs  IVoiceServer.cs
AlternateVoice.Server/src/Managers/: VoiceServer.cs
AlternateVoice.Server/test/: CMakeLists.txt  test.cpp
JustAnotherVoiceChat.Server/: CMakeLists.txt
JustAnotherVoiceChat.Server.Dummy/: JustAnotherVoiceChat.Server.Dummy.csproj  nlog.config
JustAnotherVoiceChat.Server.Dummy/src/: Program.cs  ServerHandler.cs
JustAnotherVoiceChat.Server.GTMP/: JustAnotherVoiceChat.Server.GTMP.csproj  JustAnotherVoiceChat.Server.GTMP.nuspec
JustAnotherVoiceChat.Server.GTMP.Resource/: JustAnotherVoiceChat.Server.GTMP.Resource.csproj  meta.xml
JustAnotherVoiceChat.Server.GTMP.Resource/Client/: GtmpVoice.js  JustAnotherVoiceChat.js
JustAnotherVoiceChat.Server.GTMP.Resource/Properties/: AssemblyInfo.cs
JustAnotherVoiceChat.Server.GTMP.Resource/Server/: VoiceScript.Commands.cs  VoiceScript.Events.cs  VoiceScript.GtmpEvents.cs  VoiceScript.VoiceEvents.cs  VoiceScript.cs
JustAnotherVoiceChat.Server.GTMP/Properties/: AssemblyInfo.cs
JustAnotherVoiceChat.Server.GTMP/src/: GtmpVoiceDelegates.cs
JustAnotherVoiceChat.Server.RageMP/: JustAnotherVoiceChat.Server.RageMP.csproj
JustAnotherVoiceChat.Server.RageMP.Resource/: JustAnotherVoiceChat.Server.RageMP.Resource.csproj  JustAnotherVoiceChat.Server.RageMP.Resource.csproj.DotSettings  meta.xml
JustAnotherVoiceChat.Server.RageMP.Resource/Client/: JustAnotherVoiceChat.js  index.js
JustAnotherVoiceChat.Server.RageMP.Resource/Server/: VoiceScript.VoiceEvents.cs  VoiceScript.cs
JustAnotherVoiceChat.Server.RageMP/src/: RagempVoiceDelegates.cs
JustAnotherVoiceChat.Server.Testing/: JustAnotherVoiceChat.Server.Testing.csproj
JustAnotherVoiceChat.Server.Testing/src/: FakeAction.cs
JustAnotherVoiceChat.Server.Wrapper/: JustAnotherVoiceChat.Server.Wrapper.csproj
JustAnotherVoiceChat.Server.Wrapper.Tests/: AlternateVoice.Server.Wrapper.Tests.csproj  JustAnotherVoiceChat.Server.Wrapper.Tests.csproj
JustAnotherVoiceChat.Server.Wrapper.Tests/src/: AlternateVoiceFixture.cs  IFakeVoiceClient.cs  JustAnotherVoiceChatFixture.cs  VectorFixture.cs  VoiceServerClientFixtures.cs  VoiceServerEventFixtures.cs  VoiceServerFixtures.cs  VoiceServerNativeFixture.cs
JustAnotherVoiceChat.Server.Wrapper/Properties/: AssemblyInfo.cs
JustAnotherVoiceChat.Server.Wrapper/src/: AlternateVoice.cs  Delegates.cs  JustAnotherVoiceChat.cs
JustAnotherVoiceChat.Server/include/: API.h  AlternateVoice.h  Client.h  JustAnotherVoiceChat.h  Server.h  api.h  client.h  internal.h  justAnotherVoiceChat.h  log.h  server.h
JustAnotherVoiceChat.Server/src/: API.cpp  CMakeLists.txt  Client.cpp  Server.cpp  api.cpp  client.cpp  internal.cpp  log.cpp  server.cpp
JustAnotherVoiceChat.Server/test/: CMakeLists.txt  test.cpp
JustAnotherVoiceChat.Server/tests/: CMakeLists.txt  test.cpp  testClient.cpp  testClient.h  test_api.cpp  test_api.h
docs/: communication.md  installation-gtmp.md
docs/diagrams/: client-communication.dia  connection-setup.dia  continues-communication.dia  general-communication.dia  network-communication.dia
(+166 files in other folders)
